--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -37,6 +37,9 @@
     <Reference Include="NBagOfTricks">
       <HintPath>..\lib\NBagOfTricks.dll</HintPath>
     </Reference>
+    <Reference Include="NBagOfTricks.PNUT">
+      <HintPath>..\lib\NBagOfTricks.PNUT.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
