--- a/NebOsc.csproj
+++ b/NebOsc.csproj
@@ -23,6 +23,10 @@
     <EmbeddedResource Remove="Test\**" />
     <None Remove="Test\**" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <Reference Include="NBagOfTricks">
