--- a/NebOsc.csproj
+++ b/NebOsc.csproj
@@ -4,7 +4,7 @@
     <OutputType>Library</OutputType>
     <TargetFrameworks>net5.0-windows</TargetFrameworks>
     <UseWindowsForms>false</UseWindowsForms>
-    <Version>2.0.0</Version>
+    <Version>$([System.DateTime]::UtcNow.ToString(yy.MM.dd))</Version> 
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Description>NebOsc core stuff</Description>
     <Copyright>MIT License</Copyright>
