--- a/NebOsc.csproj
+++ b/NebOsc.csproj
@@ -1,37 +1,39 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  
-  <PropertyGroup>
-    <OutputType>Library</OutputType>
-    <TargetFrameworks>net5.0-windows</TargetFrameworks>
-    <UseWindowsForms>false</UseWindowsForms>
-    <Version>$([System.DateTime]::UtcNow.ToString(yy.MM.dd))</Version> 
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Description>NebOsc core stuff</Description>
-    <Copyright>MIT License</Copyright>
-    <RootNamespace>NebOsc</RootNamespace>
-    <AssemblyName>NebOsc</AssemblyName>
-    <OutputPath>bin\</OutputPath>
-    <!-- <DefineConstants>DEBUG;TRACE</DefineConstants> -->
-    <Nullable>enable</Nullable>
-    <WarningLevel>4</WarningLevel>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <SatelliteResourceLanguages>none</SatelliteResourceLanguages> <!-- en none -->
-  </PropertyGroup>
-  
-  <ItemGroup>
-    <Compile Remove="Test\**" />
-    <EmbeddedResource Remove="Test\**" />
-    <None Remove="Test\**" />
-  </ItemGroup>
-  
-  <ItemGroup>
-    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
-  </ItemGroup>
 
-  <ItemGroup>
-    <Reference Include="NBagOfTricks">
-      <HintPath>lib\NBagOfTricks.dll</HintPath>
-    </Reference>
-  </ItemGroup>
+    <PropertyGroup>
+        <OutputType>Library</OutputType>
+        <TargetFrameworks>net5.0-windows</TargetFrameworks>
+        <UseWindowsForms>false</UseWindowsForms>
+        <Version>$([System.DateTime]::UtcNow.ToString(yy.MM.dd))</Version>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <Description>NebOsc core stuff</Description>
+        <Copyright>MIT License</Copyright>
+        <RootNamespace>NebOsc</RootNamespace>
+        <AssemblyName>NebOsc</AssemblyName>
+        <OutputPath>bin\</OutputPath>
+        <!-- <DefineConstants>DEBUG;TRACE</DefineConstants> -->
+        <!-- <NoWarn>CS1591</NoWarn> -->
+        <Nullable>enable</Nullable>
+        <WarningLevel>4</WarningLevel>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <SatelliteResourceLanguages>none</SatelliteResourceLanguages>
+        <!-- en none -->
+    </PropertyGroup>
+
+    <ItemGroup>
+        <Compile Remove="Test\**" />
+        <EmbeddedResource Remove="Test\**" />
+        <None Remove="Test\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Reference Include="NBagOfTricks">
+            <HintPath>lib\NBagOfTricks.dll</HintPath>
+        </Reference>
+    </ItemGroup>
 
 </Project>
