--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -1,35 +1,35 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
-    <UseWindowsForms>true</UseWindowsForms>
-    <AssemblyName>NebOsc.Test</AssemblyName>
-    <Deterministic>False</Deterministic>
-    <Version>$([System.DateTime]::UtcNow.ToString(yy.MM.dd))</Version> 
-    <Description>NebOsc test application</Description>
-    <Copyright>MIT License</Copyright>
-    <OutputPath>bin\</OutputPath>
-    <!-- <DefineConstants>DEBUG;TRACE</DefineConstants> -->
-    <WarningLevel>4</WarningLevel>
-    <NoWarn>CS1591;CA1822</NoWarn>
-    <Nullable>enable</Nullable>
-    <!--<GenerateDocumentationFile>true</GenerateDocumentationFile>-->
-    <SatelliteResourceLanguages>none</SatelliteResourceLanguages>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>WinExe</OutputType>
+        <TargetFramework>net5.0-windows</TargetFramework>
+        <UseWindowsForms>true</UseWindowsForms>
+        <AssemblyName>NebOsc.Test</AssemblyName>
+        <Deterministic>False</Deterministic>
+        <Version>$([System.DateTime]::UtcNow.ToString(yy.MM.dd))</Version>
+        <Description>NebOsc test application</Description>
+        <Copyright>MIT License</Copyright>
+        <OutputPath>bin\</OutputPath>
+        <!-- <DefineConstants>DEBUG;TRACE</DefineConstants> -->
+        <WarningLevel>4</WarningLevel>
+        <!-- <NoWarn>CS1591</NoWarn> -->
+        <Nullable>enable</Nullable>
+        <!--<GenerateDocumentationFile>true</GenerateDocumentationFile>-->
+        <SatelliteResourceLanguages>none</SatelliteResourceLanguages>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\NebOsc.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\NebOsc.csproj" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <Reference Include="NBagOfTricks">
-      <HintPath>..\lib\NBagOfTricks.dll</HintPath>
-    </Reference>
-  </ItemGroup>
+    <ItemGroup>
+        <Reference Include="NBagOfTricks">
+            <HintPath>..\lib\NBagOfTricks.dll</HintPath>
+        </Reference>
+    </ItemGroup>
 
 </Project>
