--- a/NebOsc.csproj
+++ b/NebOsc.csproj
@@ -4,7 +4,7 @@
         <OutputType>Library</OutputType>
         <TargetFrameworks>net6.0-windows</TargetFrameworks>
         <UseWindowsForms>false</UseWindowsForms>
-        <Version>$([System.DateTime]::UtcNow.ToString(yy.MM.dd))</Version>
+        <Version>1.1.0</Version>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <Description>NebOsc core stuff</Description>
         <Copyright>MIT License</Copyright>
