--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -6,7 +6,7 @@
         <UseWindowsForms>true</UseWindowsForms>
         <AssemblyName>Ephemera.NebOsc.Test</AssemblyName>
         <Deterministic>False</Deterministic>
-        <Version>$([System.DateTime]::UtcNow.ToString(yy.MM.dd))</Version>
+        <Version>1.1.0</Version>
         <Description>NebOsc test application</Description>
         <Copyright>MIT License</Copyright>
         <OutputPath>bin\</OutputPath>
